--- a/Synchronized.WebApp/Pages/Users/Index.cshtml
+++ b/Synchronized.WebApp/Pages/Users/Index.cshtml
@@ -20,6 +20,7 @@
                         <div class="col-md-3">
                             <article>
                                 <div class="card synched-user-card">
+                                    <div class="card-header"></div>
                                     <ul class="list-group list-group-flush">
                                         <li class="list-group-item app-usercard-item">
                                             <img class="app-user-image" src="@modelArray[counter].ImageUri" alt="user image" />
@@ -33,6 +34,7 @@
                                             <div>label1 label2 label3</div>
                                         </li>
                                     </ul>
+                                    <div class="card-footer"></div>
                                 </div>
                             </article>
                         </div>
