In QuestionDetains: - Voting mechanism is working with user bonuses and penalties. - Roles are automatically assigned to and from users. - DbInitializer updated to create users with correct number of points.   Roles are still assigned without logic. - Page built-in security is implemented.

--- a/Synchronized.WebApp/Pages/Questions/Details.cshtml
+++ b/Synchronized.WebApp/Pages/Questions/Details.cshtml
@@ -141,7 +141,7 @@
                     <div>@Html.Raw(answer.Body)</div>
                     @if (SignInManager.IsSignedIn(User))
                     {
-                        @if ((!Model.Question.IsAnswered) && (Model.UserId.Equals(Model.Question.PublisherId)))
+                        @if ((!Model.Question.IsAnswered) && !String.IsNullOrWhiteSpace(Model.UserId) && (Model.UserId.Equals(Model.Question.PublisherId)))
                         {
                             <button type="button" class="btn btn-link synched-accept">Accept Answer</button>
                         }
