--- a/Synchronized.WebApp/Pages/Questions/Ask.cshtml
+++ b/Synchronized.WebApp/Pages/Questions/Ask.cshtml
@@ -26,11 +26,12 @@
     </div>
 </div>
 
-@section Styles {
+@section Styles {    
     <link href="~/lib/jQuery-TE_v.1.4.0/jquery-te-1.4.0.css" rel="stylesheet" />
 }
 
 @section Scripts {    
     <script src="~/lib/jQuery-TE_v.1.4.0/uncompressed/jquery-te-1.4.0.js"></script>
-    <script src="~/js/ask.js"></script>
+    <script src="~/js/utils.js"></script>
+    <script src="~/js/ask.js"></script>    
 }
