--- a/Synchronized.WebApp/Pages/_Layout.cshtml
+++ b/Synchronized.WebApp/Pages/_Layout.cshtml
@@ -9,6 +9,7 @@
         <link href="~/node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
         <link href="~/node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
         <link href="~/lib/jQuery-Tags-Input-1.3.6/dist/jquery.tagsinput.min.css" rel="stylesheet" />
+        <link href="~/lib/jquery-ui-1.12.1.custom/jquery-ui.css" rel="stylesheet" />
         <link rel="stylesheet" href="~/css/site.css" />
     </environment>
     <environment exclude="Development">
@@ -16,6 +17,7 @@
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />        
         <link href="~/lib/jQuery-Tags-Input-1.3.6/dist/jquery.tagsinput.min.css" rel="stylesheet" />
+        <link href="~/lib/jquery-ui-1.12.1.custom/jquery-ui.css" rel="stylesheet" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />  
     </environment>
     @RenderSection("Styles", required: false)
@@ -57,6 +59,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
         <script src="~/node_modules/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/lib/jQuery-Tags-Input-1.3.6/dist/jquery.tagsinput.min.js"></script>
+        <script src="~/lib/jquery-ui-1.12.1.custom/jquery-ui.js"></script>
         <script src="~/js/synchedLib.js"></script>
     </environment>
     <environment exclude="Development">
@@ -74,6 +77,7 @@
                 integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
         </script>
         <script src="~/lib/jQuery-Tags-Input-1.3.6/dist/jquery.tagsinput.min.js"></script>
+        <script src="~/lib/jquery-ui-1.12.1.custom/jquery-ui.js"></script>
         <script src="~/js/synchedLib.js"></script>
     </environment>
 
