--- a/Synchronized.WebApp/Pages/_LoginPartial.cshtml
+++ b/Synchronized.WebApp/Pages/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
     <form asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a asp-page="/Account/Manage/Index" title="Manage" class="nav-link">@UserManager.GetUserName(User)</a>
+                <a asp-page="/Users/Details" asp-route-id="@UserManager.GetUserId(User)" title="Manage" class="nav-link">@UserManager.GetUserName(User)</a>
             </li>
             <li class="nav-item">
                 <button type="submit" class="btn btn-link navbar-btn nav-link" >Log out</button>
