Some bug fixes and enhancements

--- a/Synchronized.WebApp/Pages/Index.cshtml
+++ b/Synchronized.WebApp/Pages/Index.cshtml
@@ -48,23 +48,25 @@
     var prevDisabled = !Model.Questions.HasPreviousPage ? "disabled" : "";
     var nextDisabled = !Model.Questions.HasNextPage ? "disabled" : "";
 }
-<a asp-page="/Index" asp-route-pageNumber="@(Model.Questions.PageIndex - 1)"
-   class="btn btn-default @prevDisabled">
-    Previous
-</a>
-@*TODO: Add the "maxPages" with a setter and getter to the Questions page object*@
-@for (var i = 1; i <= Model.CurrentPage; i++)
-{
-    <a asp-page="/Index" asp-route-pageNumber="@i" 
-       class="btn btn-default">
-        @i
+<div id="paging">
+    <a asp-page="/Index" asp-route-pageNumber="@(Model.Questions.PageIndex - 1)"
+       class="btn btn-default @prevDisabled">
+        Previous
     </a>
-}
-<a asp-page="/Index" asp-route-pageNumber="@(Model.Questions.PageIndex + 1)" 
-   class="btn btn-default @nextDisabled">
-    Next
-</a>
+    @*TODO: Add the "maxPages" with a setter and getter to the Questions page object*@
+    @for (var i = 1; i <= Model.CurrentPage; i++)
+    {
+        <a asp-page="/Index" asp-route-pageNumber="@i"
+           class="btn btn-default">
+            @i
+        </a>
+    }
+    <a asp-page="/Index" asp-route-pageNumber="@(Model.Questions.PageIndex + 1)"
+       class="btn btn-default @nextDisabled">
+        Next
+    </a>
 
-@section Scripts {
-    <script src="~/js/questions.js" asp-append-version="true"></script>
-}
+    @section Scripts {
+        <script src="~/js/questions.js" asp-append-version="true"></script>
+    }
+</div>
