--- a/Synchronized.WebApp/Pages/Users/Index.cshtml
+++ b/Synchronized.WebApp/Pages/Users/Index.cshtml
@@ -71,24 +71,27 @@
     var nextDisabled = !Model.Users.HasNextPage ? "disabled" : "";
 }
 
-<a asp-page="/Users/Index" asp-route-pageNumber="@(Model.Users.PageIndex - 1)"
-   asp-route-sortOrder="@Model.SortOrder" class="btn btn-default @prevDisabled">
-    Previous
-</a>
 
-@*TODO: Add the "maxPages" with a setter and getter to the Questions page object*@
-@for (var i = 1; i <= Model.CurrentPage; i++)
-{
-    <a asp-page="/Users/Index" asp-route-pageNumber="@i"
-        asp-route-sortOrder="@Model.SortOrder" class="btn btn-default">
-        @i
+<div id="paging">
+    <a asp-page="/Users/Index" asp-route-pageNumber="@(Model.Users.PageIndex - 1)"
+       asp-route-sortOrder="@Model.SortOrder" class="btn btn-default @prevDisabled">
+        Previous
     </a>
-}
 
-<a asp-page="/Users/Index" asp-route-pageNumber="@(Model.Users.PageIndex + 1)"
-   asp-route-sortOrder="@Model.SortOrder" class="btn btn-default @nextDisabled">
-    Next
-</a>
+    @*TODO: Add the "maxPages" with a setter and getter to the Questions page object*@
+    @for (var i = 1; i <= Model.CurrentPage; i++)
+    {
+        <a asp-page="/Users/Index" asp-route-pageNumber="@i"
+           asp-route-sortOrder="@Model.SortOrder" class="btn btn-default">
+            @i
+        </a>
+    }
+
+    <a asp-page="/Users/Index" asp-route-pageNumber="@(Model.Users.PageIndex + 1)"
+       asp-route-sortOrder="@Model.SortOrder" class="btn btn-default @nextDisabled">
+        Next
+    </a>
+</div>
 
 @section Scripts {
     <script src="~/js/users.js"></script>
