--- a/Synchronized.WebApp/Pages/Questions/Index.cshtml
+++ b/Synchronized.WebApp/Pages/Questions/Index.cshtml
@@ -81,19 +81,21 @@
     var nextDisabled = !Model.Questions.HasNextPage ? "disabled" : "";
 }
 
-<a asp-page="/Questions/Index" asp-route-pageNumber="@(Model.Questions.PageIndex - 1)"
-   asp-route-sortOrder="@Model.SortOrder" class="btn btn-default @prevDisabled">
-    Previous
-</a>
-@*TODO: Add the "maxPages" with a setter and getter to the Questions page object*@
-@for (var i = 1; i <= Model.CurrentPage; i++)
-{
-    <a asp-page="/Questions/Index" asp-route-pageNumber="@i"
-        asp-route-sortOrder="@Model.SortOrder" class="btn btn-default">
-        @i
+<div id="paging">
+    <a asp-page="/Questions/Index" asp-route-pageNumber="@(Model.Questions.PageIndex - 1)"
+       asp-route-sortOrder="@Model.SortOrder" class="btn btn-default @prevDisabled">
+        Previous
     </a>
-}
-<a asp-page="/Questions/Index" asp-route-pageNumber="@(Model.Questions.PageIndex + 1)"
-   asp-route-sortOrder="@Model.SortOrder" class="btn btn-default @nextDisabled">
-    Next
-</a>
+    @*TODO: Add the "maxPages" with a setter and getter to the Questions page object*@
+    @for (var i = 1; i <= Model.CurrentPage; i++)
+    {
+        <a asp-page="/Questions/Index" asp-route-pageNumber="@i"
+           asp-route-sortOrder="@Model.SortOrder" class="btn btn-default">
+            @i
+        </a>
+    }
+    <a asp-page="/Questions/Index" asp-route-pageNumber="@(Model.Questions.PageIndex + 1)"
+       asp-route-sortOrder="@Model.SortOrder" class="btn btn-default @nextDisabled">
+        Next
+    </a>
+</div>
