--- a/Synchronized.WebApp/Pages/_Layout.cshtml
+++ b/Synchronized.WebApp/Pages/_Layout.cshtml
@@ -54,6 +54,7 @@
         </div>
     </div> 
 
+
     <environment include="Development">
         <script src="~/node_modules/jquery/dist/jquery.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
@@ -61,6 +62,7 @@
         <script src="~/lib/jQuery-Tags-Input-1.3.6/dist/jquery.tagsinput.min.js"></script>
         <script src="~/lib/jquery-ui-1.12.1.custom/jquery-ui.js"></script>
         <script src="~/js/synchedLib.js"></script>
+        <script src="~/js/general.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"
@@ -79,6 +81,7 @@
         <script src="~/lib/jQuery-Tags-Input-1.3.6/dist/jquery.tagsinput.min.js"></script>
         <script src="~/lib/jquery-ui-1.12.1.custom/jquery-ui.js"></script>
         <script src="~/js/synchedLib.js"></script>
+        <script src="~/js/general.js"></script>
     </environment>
 
     @RenderSection("Scripts", required: false)
@@ -88,12 +91,11 @@
             @RenderBody()
         </div>
     </section>
-
-    <div class="container">
-        <footer>
-            <p>&copy; 2018 - @ViewData["Title"]</p>
-        </footer>
-    </div>
+    @*<footer>
+        <div class="container">
+            <p>&copy; 2018 - Synchronized</p>
+        </div>
+    </footer>*@
    
 </body>
 </html>
