User role view improvement

--- a/Synchronized.WebApp/Pages/Users/Details.cshtml
+++ b/Synchronized.WebApp/Pages/Users/Details.cshtml
@@ -33,7 +33,7 @@
                 <div>@Model.ViewUser.Address</div>
                 <div>Member since:</div>
                 @*<div>Label1, Label2</div>*@
-                <div>Role: @Model.ViewUser.Roles</div>
+                <div>Role: @Model.ViewUser.MajorRole</div>
             </div>
             <div id="app-user-rating">@Model.ViewUser.Points</div>
         </div>        
