--- a/Synchronized.WebApp/Pages/Users/Index.cshtml
+++ b/Synchronized.WebApp/Pages/Users/Index.cshtml
@@ -49,7 +49,7 @@
                                             </div>
                                         </li>
                                         <li class="list-group-item app-usercard-item">
-                                            <div>@modelArray[counter].Roles</div>
+                                            <div>@modelArray[counter].MajorRole</div>
                                             <div>@modelArray[counter].Points</div>
                                             <div>label1 label2 label3</div>
                                         </li>
