Bug fixes and such.

--- a/Synchronized.WebApp/Pages/Tags/Create.cshtml
+++ b/Synchronized.WebApp/Pages/Tags/Create.cshtml
@@ -23,7 +23,7 @@
                 </div>
                 <div class="form-group">
                     <div class="input-group">
-                        <textarea asp-for="Tag.Description" class="form-control" aria-label="Description" placeholder="Description" maxlength="128"></textarea>
+                        <textarea asp-for="Tag.Description" class="form-control tag-details" aria-label="Description" placeholder="Description" maxlength="128"></textarea>
                     </div>
                 </div>
                 <button type="submit" class="btn btn-secondary">Create</button>
