--- a/Synchronized.WebApp/wwwroot/css/site.css
+++ b/Synchronized.WebApp/wwwroot/css/site.css
@@ -96,6 +96,10 @@ html {
     overflow-y: hidden;
 }
 
+.synched-tag-card .card-body {
+    overflow: hidden;
+}
+
 .tag-details {
     height: 125px;
 }
